fixed drop down nav bar spacing issue

--- a/themes/catching-the-spirit/sass/_navigation.scss
+++ b/themes/catching-the-spirit/sass/_navigation.scss
@@ -8,29 +8,19 @@
         background-color: $color__lightblue;
        
         @include desktop {
-            // height: 80px;
-            //  width:100vh !important;
-
             background-color: $color__blue;
         }
 // navigation desktop
         .nav-desktop{
             display: none;
-            // @include container;
             position:relative;
-            // background:red;
             @include desktop{
-                // padding-left:40px;
                 height: 80px;
-                // width:1120px;
                 margin:0 auto;
                 display: flex;
                 justify-content: center;
                 .menu{
-                    // background:lightgrey;
                     display: flex;
-                    // padding-left: 3rem;
-                    // right:0;
                     .give{
                         background-color: $color__red;
                         color: white;
@@ -38,24 +28,32 @@
                         width: 180px;
                         display:table;
                         margin: 0 0 0 7rem;
-                        // might need to find another solution not user friendly if menu items change.
+                        
                         a{
                             font-size: 26px;
                             font-weight: 100;
                             display: table-cell;
                             vertical-align: middle;
                             text-decoration: none;
+                              &:after{
+                            content:"";
+                        }
                         }
                     }
                 }
                 .menu-item{
                         margin: 2rem 0;
                         width: 8.2rem;
+                       
                         a{
                             text-decoration: none;
                             font-size: 18px;
                             font-weight: 100;
                             color: white;
+                             &:after{
+                            content:" 0000000000";
+                            opacity:0
+                        }
                         }
                     }
                 // sub navigation desktop
@@ -63,8 +61,10 @@
                             background-color: $color__blue;
                             position: absolute;
                             text-align: left;
-                            margin-top: 0.1rem;
                             display: none;
+
+                           
+                           
                             :last-child{
                                 margin-bottom: 0.7rem;
                             }
@@ -74,6 +74,11 @@
                                 font-weight: 100;
                                 margin-left: 1.4rem;
                                 line-height: 1rem;
+
+                               
+                                  &:after{
+                            content:"";
+                        }
                                 
                             }
                         }
@@ -86,18 +91,8 @@
                     position: fixed;
                     background-color: $color__blue;
                     top: 0;
-                    // left: 0;
                     width:100vw;
                     margin:0 auto !important;
-                    // display:flex;
-                    // justify-content: center;
-                    // right: 0;
-                    // height: 80px;
-                    // padding-left: 3rem;
-                    // margin: 0;
-                    //  width: 100%;
-                    // padding-left: 2.45rem;
-                    // -webkit-transform: translate3d(0, 0, 0);
                 }
 // navigation mobile
         .nav-mobile{
